--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ Theme Name: C9 Music Child
 Theme URI: https://music.covertnine.com
 Author: COVERT NINE
 Author URI: https://www.covertnine.com
-Template: c9-starter
+Template: c9-music
 GitHub Theme URI: https://github.com/covertnine/c9-music-child.git
-Description: C9 Music Child Theme
+Description: C9 Music Child Theme based on the C9 Blocks + C9 Starter theme.
 Version: 1.0
 License: C9 WordPress Theme, Copyright 2013-2020 COVERT NINE LLC
 C9 Music Child Theme is distributed under the terms of the GNU GPL version 2
