updated child theme info and screenshot

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: COVERT NINE
 Author URI: https://www.covertnine.com
 Template: c9-music
 GitHub Theme URI: https://github.com/covertnine/c9-music-child.git
-Description: C9 Music Child Theme based on the C9 Blocks + C9 Starter theme.
+Description: C9 Music is a theme for events, musicians, DJs, or bands based on the C9 Starter theme that uses Bootstrap's responsive grid system and Gutenberg blocks
 Version: 1.0
 License: C9 WordPress Theme, Copyright 2013-2020 COVERT NINE LLC
 C9 Music Child Theme is distributed under the terms of the GNU GPL version 2
